# opentel-fastapi

app-1/: .env.example  main.py  pyproject.toml  readme.md
app-2/: main.py  pyproject.toml  readme.md
